--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="max-width">
-                <div class="logo"><a href="#"><img src="./images/SVG/logoB.svg" alt=""></a></div>
+                <div class="logo"><a href="#"><img src="./images/white_Logo.svg" alt=""></a></div>
                 <ul class="menu">
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Skills</a></li>
+                    <!-- <li><a href="">Services</a></li>
+                    <li><a href="">Skills</a></li> -->
+                    <li><a href="">Portfolio</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
