--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
             </div>
         </nav>
         <!-- Navigation Bar -->  
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+        <!-- Home Section Starts Here -->
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-1">
+                        Hello, My name is
+                    </div>
+                    <div class="text-2">
+                        Deep Patel
+                    </div>
+                    <div class="text-3">
+                        And I'm a <span class="txt-type" data-wait=3000 data-words='["Designer.","Developer.", "3D Artist."]'></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Home Section Ends Here -->
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
