--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
+            <div class="burgerMenu">
+                  <img src="" alt="bar">
+            </div>
         </nav>
         <!-- Navigation Bar -->  
 
