--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
                 <ul class="menu">
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <!-- <li><a href="">Services</a></li>
-                    <li><a href="">Skills</a></li> -->
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
-            <div class="burgerMenu">
-                  <img src="" alt="bar">
+            <div class="burgerMenu activeBurger">
+                <div class="line line1"></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
             </div>
         </nav>
         <!-- Navigation Bar -->  
 
         <!-- Home Section Starts Here -->
-        <section class="home" id="home">
+        <main class="home" id="home">
             <div class="max-width">
                 <div class="home-content">
                     <div class="text-1">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </main>
         <!-- Home Section Ends Here -->
         <script type="module" src="js/main.js"></script>
     </body>
