--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="max-width">
                 <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
                 <ul class="menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
             <div class="burgerMenu activeBurger">
