--- a/gallary.html
+++ b/gallary.html
@@ -29,17 +29,43 @@
 
         <!-- Gallary Page -->
         
-        <section class="gallarySection">
+        <section class="gallarySection container">
 
             <div class="galTitle">
                 <p>PORTFOLIO</p>
             </div>
             <div class="gallaryCon">
-                
+                <div class="image-gallary">
+
+                    <a href="images/img-1">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+
+                    <a href="images/img-2">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+
+                    <a href="images/img-3">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+
+                    <a href="images/img-4">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+
+                    <a href="images/img-5">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+
+                    <a href="images/img-6">
+                        <ion-icon name="scan"></ion-icon>
+                    </a>
+                </div>
             </div>
         </section>
 
         <!-- Gallary Page -->
         <script type="module" src="js/main.js"></script>
+        <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     </body>
 </html>
