--- a/gallary.html
+++ b/gallary.html
@@ -37,27 +37,35 @@
             <div class="gallaryCon">
                 <div class="image-gallary">
 
-                    <a href="images/img-1">
+                    <a href="images/img-1" class="img-1">
                         <ion-icon name="scan"></ion-icon>
                     </a>
 
-                    <a href="images/img-2">
+                    <a href="images/img-2" class="img-2">
                         <ion-icon name="scan"></ion-icon>
                     </a>
 
-                    <a href="images/img-3">
+                    <a href="images/img-3" class="img-3">
                         <ion-icon name="scan"></ion-icon>
                     </a>
 
-                    <a href="images/img-4">
+                    <!-- <a href="images/img-4" class="img-4">
+                        <ion-icon name="scan"></ion-icon>
+                    </a> -->
+
+                    <a href="images/img-5" class="img-5">
                         <ion-icon name="scan"></ion-icon>
                     </a>
 
-                    <a href="images/img-5">
+                    <a href="images/img-6" class="img-6">
                         <ion-icon name="scan"></ion-icon>
                     </a>
 
-                    <a href="images/img-6">
+                    <!-- <a href="images/img-7" class="img-7">
+                        <ion-icon name="scan"></ion-icon>
+                    </a> -->
+
+                    <a href="images/img-8" class="img-8">
                         <ion-icon name="scan"></ion-icon>
                     </a>
                 </div>
