--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/master.css" media="screen">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <title>Deep Patel</title>
     </head>
     <body>
@@ -59,6 +60,23 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="footerContainer">
+
+                <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
+                <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
+                <div class="media-link">
+                    <i class="fab fa-github"></i>
+                    <i class="fab fa-artstation"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-facebook"></i>
+                    <i class="far fa-envelope"></i>
+                </div>
+                <p class="copyright">&copy; copyrights reserved 2020.</p>
+                <div class="line"></div>
+                
+            </div>
+        </footer>
         <!-- about section -->
         <script type="module" src="js/main.js"></script>
     </body>
