--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <footer>
             <div class="footerContainer">
 
-                <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
+                <div class="logoF"><a href="#"><img src="./images/white_Logo.svg" alt=""></a></div>
                 <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
                 <div class="media-link">
                     <i class="fab fa-github"></i>
@@ -72,6 +72,12 @@
                     <i class="fab fa-facebook"></i>
                     <i class="far fa-envelope"></i>
                 </div>
+                <ul class="menuFooter">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
                 <p class="copyright">&copy; copyrights reserved 2020.</p>
                 <div class="line"></div>
                 
