--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
             <div class="max-width">
                 <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
                 <ul class="menu">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="burgerMenu activeBurger">
@@ -63,7 +63,7 @@
         <footer>
             <div class="footerContainer">
 
-                <div class="logoF"><a href="#"><img src="./images/white_Logo.svg" alt=""></a></div>
+                <div class="logoF"><a href="#"><img src="./images/White_Logo.svg" alt=""></a></div>
                 <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
                 <div class="media-link">
                     <i class="fab fa-github"></i>
