--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </div>
