ThumbNailFetched_AND_ReadMeDone

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="max-width">
-                <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
+                <div class="logo"><a href="index.html"><img src="./images/black_Logo.svg" alt=""></a></div>
                 <ul class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -34,9 +34,10 @@
                     <img @click="imgClicked" src="images/imgL-2.jpg" alt="">
                     <img @click="imgClicked" src="images/imgL-3.jpg" alt=""> -->
                 </div>
-                <div class="carContent"> <!-- :class="{'show-data' : show_bio_data} -->
-                    <!-- <h2>{{ currentModelData.name }}</h2>
-                    <p>{{ currentModelData.about }}</p> -->
+                <div class="carContent">
+                    <!-- :class="{'show-data' : show_bio_data}"</h2> -->
+                    <!-- <h2>{{ myWorkData.name }} 
+                    <p>{{ myWorkData.about }}</p> -->
                     
                     <h2>{{message}}</h2>
                     <img src="images/imgL-2.jpg" alt="">
