--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <footer>
             <div class="footerContainer">
 
-                <div class="logoF"><a href="#"><img src="./images/White_Logo.svg" alt=""></a></div>
+                <div class="logoF"><a href="index.html"><img src="./images/White_Logo.svg" alt=""></a></div>
                 <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
                 <div class="media-link">
                     <i class="fab fa-github"></i>
