--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="max-width">
-                <div class="logo"><a href="#"><img src="./images/black_Logo.svg" alt=""></a></div>
+                <div class="logo"><a href="index.html"><img src="./images/black_Logo.svg" alt=""></a></div>
                 <ul class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
