--- a/about.html
+++ b/about.html
@@ -55,15 +55,15 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button class="button button1">My Resume</button>
-                    <button class="button button2">Hire Me</button>
+                    <a href="docs/resume.pdf"><button class="button button1">My Resume</button></a>
+                    <a href="contact.php"><button class="button button2">Hire Me</button></a>
                 </div>
             </div>
         </div>
         <footer>
             <div class="footerContainer">
 
-                <div class="logoF"><a href="index.html"><img src="./images/White_Logo.svg" alt=""></a></div>
+                <div class="logoF"><a href="about.html"><img src="./images/White_Logo.svg" alt=""></a></div>
                 <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
                 <div class="media-link">
                     <i class="fab fa-github"></i>
