--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
             <div class="max-width">
                 <div class="logo"><a href="index.html"><img src="./images/black_Logo.svg" alt=""></a></div>
                 <ul class="menu">
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="portfolio.html" class="active">Portfolio</a></li>
                     <li><a href="contact.php">Contact</a></li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         <footer>
             <div class="footerContainer">
 
-                <div class="logoF"><a href="#"><img src="./images/White_Logo.svg" alt=""></a></div>
+                <div class="logoF"><a href="portfolio.html"><img src="./images/White_Logo.svg" alt=""></a></div>
                 <div class="tagLine">Living, learning, & leveling up<br> one day at a time.</div>
                 <div class="media-link">
                     <i class="fab fa-github"></i>
