--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Deep Patel</title>
         <link rel="stylesheet" href="css/master.css" media="screen">
+        <link rel="icon" type="image/png" href="images/favicon.png" sizes="120x120">
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     </head>
     <body>
