--- a/about.html
+++ b/about.html
@@ -41,17 +41,9 @@
                     </div>
                     <div class="aboutMe">
                         <p>
-                            I am creative Front-End Developer, Graphic and 3D designer
-                            aspiring to be an entreprenure. Always looking for best
-                            innovative ways to design and to build web application. Highly
-                            motivated individual with problem solving ability and
-                            commited to keep improving my skills. I am always try to
-                            combine my technical and artistic skills to bring
-                            something new.<br><br>
-                            When I don’t code or design, I like to play outdoor sports and
-                            whatching movies which really gives me a lot of ideas for
-                            my work.I also like to spend some time at the place where
-                            land and watermeet-it’s my drug.
+                            I am a creative Front-End Developer, Graphic and 3D designer aspiring to be an entrepreneur. I am always looking for the best innovative ways to design and to build a web application. Highly motivated individual with the problem-solving ability and committed to keeping improving my skills. I always try to combine my technical and artistic skills to bring something new.<br><br>
+
+                            When I don’t code or design, I like to play outdoor sports and watching movies which gives me a lot of ideas for my work. I also like to spend some time at the place where land and water meet-it’s drug.
                          </p>
                     </div>
                 </div>
