--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="work.html">Portfolio</a></li>
                     <li><a href="contact.php">Contact</a></li>
                 </ul>
             </div>
@@ -45,6 +45,21 @@
             </div>
         </main>
         <!-- Home Section Ends Here -->
+
+        <!-- GSAP -->
+        <div class="intro">
+            <div class="intro-text">
+                <h1 class="hide">
+                    <span class="text">Welcome to</span>
+                </h1>
+                <h1 class="hide">
+                    <span class="text">My portfollio website.</span>
+                </h1>
+            </div>
+        </div>
+        <div class="slider"></div>
+        <!-- GSAP -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
         <script type="module" src="js/main.js"></script>
     </body>
 </html>
