--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     </head>
-    <body>
+    <body class="workBody">
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="max-width">
@@ -33,22 +33,29 @@
                 <div class="portfolioText">
                     <p>PORTFOLIO</p>
                 </div>
-                <div class="gallery">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
+                <div class="portfolio">
+                    <div class="gallery">
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                    </div>
+                    <div class="show-reel">
+                        <p>MOTION GRAPHICS <span class="reel">SHOWREEL</span></p>
+                        <video controls>
+                            <source src="video/demoreel.webm" type="video/webm">
+                        </video>
+                    </div>
                 </div>
             </section>
         </main>
-
-        <!-- <footer>
+        <!-- <footer class="work-footer">
             <div class="footerContainer">
 
                 <div class="logoF"><a href="portfolio.html"><img src="./images/White_Logo.svg" alt=""></a></div>
