--- a/work.html
+++ b/work.html
@@ -35,22 +35,37 @@
                 </div>
                 <div class="portfolio">
                     <div class="gallery">
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
+                        <img src="./images/Thumbnails/G_bleach.png" alt="" v-on:click="lightbox();">
+                        <img src="./images/Thumbnails/G_dubai.png" alt="">
+                        <img src="./images/Thumbnails/G_gymboree.png" alt="">
+                        <img src="./images/Thumbnails/G_timhortons.png" alt="">
+                        <img src="./images/Thumbnails/T_barrel.png" alt="">
+                        <img src="./images/Thumbnails/T_beertable.png" alt="">
+                        <img src="./images/Thumbnails/T_kleenex.png" alt="">
+                        <img src="./images/Thumbnails/T_mike.png" alt="">
                     </div>
                     <div class="show-reel">
                         <p>MOTION GRAPHICS <span class="reel">SHOWREEL</span></p>
                         <video controls>
                             <source src="video/demoreel.webm" type="video/webm">
                         </video>
+                    </div>
+                </div>
+            </section>
+            <section class="first-eight-pop">
+                <div class="cross-button">&#xd7;</div>
+                <div class="product-section">
+                    <img src="/images/collatoral.png" alt="">
+                    <div class="product-about">
+                        <p>Collatoral Design</p> <!-- Dynamic Title and about-->
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolores eum aspernatur provident ullam nihil necessitatibus sed rem, repellat ut aliquam officia repellendus eius natus quas vitae beatae excepturi inventore reprehenderit! Veniam ullam odit rerum cumque ipsa dolores laboriosam rem soluta est pariatur labore .<p>
+                    </div>
+                    <div class="product-about">
+                        <p>Software Used:</p> <!-- Software used-->
+                        <p>Adobe Photoshop, Adobe Illustraor<p>
+                    </div>
+                    <div class="product-about">
+                        <p>Link:<a href="#">  Click Here</a></p> <!-- Link -->
                     </div>
                 </div>
             </section>
