--- a/work.html
+++ b/work.html
@@ -41,28 +41,29 @@
                         <img data-model-target=".first-eight-pop" src="./images/Thumbnails/T_kleenex.png" alt="">
                         <img data-model-target=".first-eight-pop" src="./images/Thumbnails/T_mike.png" alt="">
                     </div>
-                    <!-- <div class="show-reel">
+                    <div class="show-reel">
                         <p>MOTION GRAPHICS <span class="reel">SHOWREEL</span></p>
                         <video controls>
                             <source src="video/demoreel.webm" type="video/webm">
                         </video>
-                    </div> -->
+                    </div>
                 </div>
             </section>
             <section class="first-eight-pop">
                 <div data-close-button class="cross-button">&#xd7;</div>
                 <div class="product-section">
-                    <img src="/images/collatoral.png" alt="">
+                    <div class="title-pop">
+                        Collatoral Design
+                    </div>
+                    <img src="/images/gymborebusiness.jpg" alt="">
                     <div class="product-about">
-                        <p>Collatoral Design</p> 
+                        <p>About</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolores eum aspernatur provident ullam nihil necessitatibus sed rem, repellat ut aliquam officia repellendus eius natus quas vitae beatae excepturi inventore reprehenderit! Veniam ullam odit rerum cumque ipsa dolores laboriosam rem soluta est pariatur labore .<p>
                     </div>
-                    <div class="product-about">
+                    <div class="product-about software-section">
                         <p>Software Used:</p> 
                         <p>Adobe Photoshop, Adobe Illustraor<p>
-                    </div>
-                    <div class="product-about">
-                        <p>Link:<a href="#">  Click Here</a></p> 
+                        <span><strong>Link :</strong><a href="#">  Click Here</a></span>
                     </div>
                 </div>
             </section>
