--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="work.html">Portfolio</a></li>
+                    <li><a href="work.php">Portfolio</a></li>
                     <li><a href="contact.php">Contact</a></li>
                 </ul>
             </div>
